# Tegen

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: package_manager.hpp
src/: main.cpp
